--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,51 @@
 div.review-container {
-    border: 1px solid gray;position:relative;padding: 5px;
+    border-top: 2px solid gray;
+    position:relative;
+    padding: 10px;
 }
 
-div.review-container > img {
-    width: 100px;margin-right: 5px;
+div.review-container > div > img {
+    width: 100px;
+    margin-right: 5px;
 }
 
-div.review-container > .rating {
-    width:100px;height: 100px;border: 1px solid gray;background: #e2e2e2;font-size: 60px;text-align: center;margin-left: 5px;font-family: 'Lobster', cursive;
-}
-
-div.review-container > .rating > small {
-    font-size: 20px;
-    margin-top: -20px;
-    margin-left: -21px;
-    position: absolute;
-    color: #797979;
-}
-
-div.review-container > .review-author {
-    font-weight: 600;
-    font-size: 25px;
+div.review-container > div > .rating {
+    width:100px;
+    background: #e8e8e8;
+    text-align: center;
     font-family: 'Lobster', cursive;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    border-width: 1px 1px 0px 1px;
+    border-color: #c3c3c3;
+    border-style: solid;
+}
+
+div.review-container > div > .rating > small {
+    font-size: 20px;
+    color: #636363;
+    text-align: center;
+}
+
+div.review-container > div > .review-author {
+    font-size: 12px;
+    text-align: center;
+    width: 100px;
 }
 
 div.review-container > .review-short {
     text-align: justify;
+}
+
+#wsreview-number {
+    display: block;
+    font-weight: 400;
+    width: 40px;
+    height: 40px;
+    margin: 1ex auto;
+    background: silver;
+    text-align: center;
+    padding-top: 6px;
+    box-sizing: border-box;
+    color: white;
 }
